<resources>
    <string name="app_name">Project</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile_photo">Profile Photo</string>
</resources>